<resources>
    <!-- Global -->
    <string name="app_name">ZonaEgg</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet</string>
    <string name="back">Back</string>
    <string name="invalid_input_entered">Invalid input entered</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>

    <!-- Credits -->
    <string name="darren_name">Darren Denisson Chandra</string>
    <string name="darren_nim">00000034810</string>
    <string name="elfajar_name">Elfajar Bintang Samudera</string>
    <string name="elfajar_nim">00000037235</string>
    <string name="gilang_name">Gilang Satria Putra</string>
    <string name="gilang_nim">00000037741</string>
    <string name="nehemia_name">Nehemia Cecio Tanjung Jati</string>
    <string name="nehemia_nim">00000039011</string>
    <string name="norbertus_name">Norbertus Dewa Rucci</string>
    <string name="norbertus_nim">00000037417</string>

    <!-- Getting Started -->
    <string name="illustration_image">Illustration image</string>
    <string name="get_started">Get Started</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="new_user_question">New user?</string>

    <!-- Register -->
    <string name="register">Register</string>
    <string name="already_have_an_account_question">Already have an account?</string>
    <string name="create_an_account">Create an account</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="toggle_dark_theme">Toggle Dark Theme</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="getting_started">Getting Started</string>
    <string name="homepage">Homepage</string>
    <string name="popular_places">Popular Places</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="credits">Credits</string>
    <string name="logout">Logout</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Getting Started -->
    <string name="str_getting_started">Getting Started</string>
    <string name="str_started_title">ZonaEgg</string>
    <string name="str_started_welcome">Welcome to ZonaEgg</string>

    <!-- Home -->
    <string name="search">Search</string>
    <string name="eatery_photo">Eatery Photo</string>
    <string name="eatery_name">Eatery Photo</string>
    <string name="eatery_category">Eatery Category</string>
    <string name="eatery_rating">Eatery Rating</string>
    <string name="eatery_distance">Eatery Distance</string>
    <string name="separator">Separator</string>

    <!-- Eatery -->
    <string name="add_to_favorites">Add to favorites</string>
    <string name="rating">Rating</string>
    <string name="view_all_reviews">View all reviews</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>

    <!-- Sign In -->
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="example">Example</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="sign_out">Sign out</string>
    <string name="image_retreve">Go to Image</string>


    <!-- Web Client -->
    <string name="webClientId">619114856130-uhkud4s1628nfucpju6aa0m1akns2bc8.apps.googleusercontent.com</string>
    <string name="profile">Profile</string>
</resources>