<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Eatery Photo -->
        <androidx.cardview.widget.CardView
            android:id="@+id/home_cvExploreEateryPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/home_ivExploreEateryPhoto"
                android:layout_width="110dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                android:contentDescription="@string/eatery_photo"
                />
        </androidx.cardview.widget.CardView>

        <!-- Eatery, category and supporting text -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="4dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/home_cvExploreEateryPhoto"
            app:layout_constraintStart_toEndOf="@id/home_cvExploreEateryPhoto"
            app:layout_constraintTop_toTopOf="@id/home_cvExploreEateryPhoto">
            <TextView
                android:id="@+id/home_tvExploreEateryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="Pondok Makan"
                />
            <TextView
                android:id="@+id/home_tvExploreEateryCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Warteg"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_star"
                    android:contentDescription="@string/eatery_rating"
                    app:tint="@color/yellow_200"
                    />
                <TextView
                    android:id="@+id/home_tvExploreEateryRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:text="4.5"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_circle"
                    android:contentDescription="@string/separator"
                    android:paddingHorizontal="8dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:contentDescription="@string/eatery_distance"
                    />
                <TextView
                    android:id="@+id/home_tvEateryDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    tools:text="1.3 km"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
