<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EateryActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/getting_started"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Back button -->
    <ImageButton
        android:id="@+id/login_btnBack"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/backButton" />

    <!-- Favorite button -->
    <ImageButton
        android:id="@+id/login_btnFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_to_favorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/favoriteButton"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="210dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:textAppearance="?attr/textAppearanceHeadline6"
                tools:text="Pondok Makan"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                tools:text="Warteg"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_menu_book"
                    android:contentDescription="@string/app_name"
                    />
                <TextView
                    android:id="@+id/home_tvEateryRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceBody2"
                    tools:text="10 dishes"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_circle"
                    android:contentDescription="@string/app_name"
                    android:paddingHorizontal="8dp"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_wallet"
                    android:contentDescription="@string/app_name"
                    />
                <TextView
                    android:id="@+id/home_tvEateryDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceBody2"
                    tools:text="Rp. 9k - 20k"
                    />
            </LinearLayout>
        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>