<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".eatery.EateryReviewFragment"
    android:orientation="vertical">

    <!-- Rating Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/rating_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="30dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Rating Header -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/testing3_view_all_reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/view_all_reviews"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Rating Scores -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Rating 5 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/digit_five"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?neutral2" />

                        <ProgressBar
                            android:id="@+id/testing3_rating5"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- Rating 4 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/digit_four"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?neutral2" />

                        <ProgressBar
                            android:id="@+id/testing3_rating4"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- Rating 3 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/digit_three"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?neutral2" />

                        <ProgressBar
                            android:id="@+id/testing3_rating3"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- Rating 2 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/digit_two"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?neutral2" />

                        <ProgressBar
                            android:id="@+id/testing3_rating2"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                    <!-- Rating 1 -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="12dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="2dp"
                            android:paddingHorizontal="2dp"
                            android:text="@string/digit_one"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="?neutral2" />

                        <ProgressBar
                            android:id="@+id/testing3_rating1"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp" />
                    </LinearLayout>

                </LinearLayout>

                <!-- Rating details -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/testing3_rating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center_horizontal|bottom"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:textColor="?colorOnSecondary"
                        android:textStyle="bold"
                        tools:text="4.5" />

                    <ImageView
                        android:id="@+id/testing3_rating_star"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-16dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/rating"
                        android:padding="4dp"
                        tools:src="@drawable/ic_star" />

                    <TextView
                        android:id="@+id/testing3_rating_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:textAppearance="?textAppearanceBody2"
                        android:textColor="?android:textColorSecondary"
                        tools:text="233 reviews" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Open Hours Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <!-- Open Hours Header -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:text="Open hours" />

            <!-- Open Hours 1 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/testing3_open_hour1_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Monday - Friday" />
                <TextView
                    android:id="@+id/testing3_open_hour1_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="6.00 - 19.30" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Open Hours 2 -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/testing3_open_hour2_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="Saturday - Sunday" />
                <TextView
                    android:id="@+id/testing3_open_hour2_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="9.00 - 17.00" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>